Show Google Maps with Benches

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,9 +2,12 @@
 <html>
 <head>
   <title>BenchBnB</title>
+
+  <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js?key=AIzaSyCD8YlDc-plm2p1mis1cfEWFD53o0PgOvo" %>
   <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
+  <%= javascript_include_tag 'application' %>
+
 </head>
 <body>
 
